# H-JEPA

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ALGORITHMIC_BUG_REPORT.md  ALGORITHM_CORRECTNESS_AUDIT.md  ARCHITECTURE_REVIEW.md  BUG_FIXES_SUMMARY.md  CI_FIXES.md  CJEPA_SUMMARY.md  CONFIG_ANALYSIS_INDEX.md  CONFIG_ANALYSIS_REPORT.md  CONFIG_ANALYSIS_SUMMARY.md  CONFIG_QUICK_REFERENCE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENTS_FINAL.md  CREATION_SUMMARY.md  DATASET_COMPARISON.md  DATA_PIPELINE_COMPLETE.md  DATA_PREPARATION.md  DATA_README.md  DEPLOYMENT.md  DEPLOYMENT_INFRASTRUCTURE_COMPLETE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_AUDIT_SUMMARY.txt  DOCUMENTATION_FIX_CHECKLIST.md  Dockerfile.inference  Dockerfile.train  EVALUATION_GUIDE.md  EVALUATION_PLAN.md  EVALUATION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FLASH_ATTENTION_IMPLEMENTATION.md  FLASH_ATTENTION_SUMMARY.md  FPN_IMPLEMENTATION_REPORT.md  FPN_QUICK_START.md  (+89 more)
configs/: INDEX.md  QUICK_START.md  README_SAFE_CONFIG.md  SAFE_CONFIG_CHANGES.md  VALIDATION_SUMMARY.md  cpu_cifar10.yaml  debug_minimal.yaml  debug_minimal_memsafe.yaml  default.yaml  deit3_augmentation.yaml  eval_test.yaml  foundation_model_cifar_stl.yaml  foundation_model_mini.yaml  fpn_concat_example.yaml  fpn_example.yaml  imagenet100_multi_dataset.yaml  lewm_smoke_test.yaml  lewm_tier1.yaml  lewm_tier2.yaml  lewm_world_model.yaml  m1_max_5epoch_demo.yaml  m1_max_full_100epoch.yaml  m1_max_full_20epoch.yaml  m1_max_imagenet100_100epoch.yaml  m1_max_optimal_20epoch.yaml  m1_max_quick_val.yaml  mps_optimized_v2.yaml  multicrop_training.yaml  overnight_safe.yaml  overnight_training_aggressive.yaml  overnight_training_conservative.yaml  pure_ijepa.yaml  quick_test.yaml  quick_validation.yaml  rope_experiment.yaml  sigreg_example.yaml  small_experiment.yaml  validation_test.yaml
deployment/: README.md  prometheus.yml
docs/: ARCHITECTURE.md  CJEPA_IMPLEMENTATION_REPORT.md  DATA_PIPELINE_SUMMARY.md  DEIT3_AUGMENTATION_IMPLEMENTATION.md  DEIT3_QUICK_REFERENCE.md  EVALUATION.md  FPN_ARCHITECTURE_DIAGRAM.txt  FPN_IMPLEMENTATION.md  IMAGENET100_ARCHITECTURE.md  IMAGENET100_INTEGRATION.md  MULTICROP_IMPLEMENTATION.md  QUICK_START_TRAINING.md  SIGREG_IMPLEMENTATION.md  STRATEGIC_IMPROVEMENT_PLAN.md  TENSORBOARD_INTEGRATION_GUIDE.md  TRAINING.md  TRAINING_GUIDE.md  gradient_checkpointing.md  gradient_checkpointing_implementation_report.md  testing.md  training.md
examples/: cjepa_usage_example.py  data_example.py  deit3_augmentation_example.py  evaluation_examples.py  gradient_checkpointing_example.py  imagenet100_example.py  loss_usage_examples.py  masking_example.py  multicrop_training_example.py  sigreg_usage_example.py  training_example.py  visualization_example.py
kubernetes/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
notebooks/: explore_hjepa.ipynb
scripts/: ARCHITECTURE.md  QUICK_START.md  TRAINING_GUIDE.md  analyze_validation_run.py  auto_analyze_and_recommend.sh  benchmark.sh  benchmark_mps_attention.py  create_combined_dataset.py  create_foundation_model.py  deploy.sh  download_data.sh  download_imagenet100.sh  eval_knn.py  eval_linear_probe.py  eval_transfer.py  evaluate.py  evaluate_model.py  example_usage.sh  explore_model.py  export_model.py  generate_eval_visualizations.py  generate_test_checkpoint.py  launch_tensorboard.sh  lewm_smoke_test.py  monitor_training.py  plot_training_progress.py  quick_eval.py  quick_eval_after_training.sh  run_tests.py  run_training.sh  test_deployment.sh  train.py  train_mps_safe.sh  verify_data_pipeline.sh  verify_overnight_training.sh  visualize.py  visualize_attention_rollout.py  visualize_features.py  watch_and_explore.sh
src/: __init__.py
tests/: DATA_MODULE_TESTS_README.md  DATA_TESTS_SUMMARY.md  EVALUATION_TESTS_SUMMARY.md  README_TRAINERS_TESTS.md  TEST_CASE_REFERENCE.md  TEST_SUMMARY.md  TEST_UTILS_COVERAGE.md  UTILS_TESTING_BEST_PRACTICES.md  UTILS_TEST_QUICK_START.md  __init__.py  conftest.py  run_data_module_tests.sh  run_evaluation_tests.sh  test_combined_losses.py  test_contrastive_losses.py  test_data.py  test_data_modules.py  test_datasets.py  test_download.py  test_encoder.py  test_feature_quality.py  test_flash_attention.py  test_fpn.py  test_ijepa_compliance.py  test_knn_eval.py  test_layerscale.py  test_lewm_features.py  test_linear_probe.py  test_losses.py  test_mask_semantics.py  test_masking.py  (+17 more)
(+84 files in other folders)
