[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h-jepa"
version = "0.1.0"
description = "Hierarchical Joint-Embedding Predictive Architecture (H-JEPA) implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "H-JEPA Team"}
]
keywords = ["deep-learning", "self-supervised-learning", "computer-vision", "jepa", "vision-transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "timm>=0.9.0",
    "einops>=0.7.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/H-JEPA"
Documentation = "https://github.com/yourusername/H-JEPA#readme"
Repository = "https://github.com/yourusername/H-JEPA"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "E712",   # comparison to True/False (common in tests with torch tensors)
    "B006",   # mutable default arguments (too many to refactor safely)
    "B007",   # unused loop control variable (prefix with _ is noise)
    "B008",   # do not perform function calls in argument defaults
    "B028",   # no explicit stacklevel in warnings.warn
    "B905",   # zip() without strict= parameter
    "E741",   # ambiguous variable name
    "UP038",  # isinstance(x, (A, B)) is valid and more readable than X | Y
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
